# autoresearch

./: .eslintrc.json  .gitignore  CONTRIBUTING.md  README.md  WHERE_TO_LOOK.md  package.json  prepare.py  pyproject.toml  train.py
experiments/: CREATING_EXPERIMENTS.md  DEPLOYMENT_COMPLETE.md  FRAMEWORK_COMPLETE.md  IMPLEMENTATION_SUMMARY.md  INFERENCE_INTEGRATION.md  INTEGRATION_FLOW.md  PUSH_TO_REMOTE.md  QUICK_START.md  README.md  README_OLD.md
experiments/_template/: .env.example  .gitignore  HISTORY.md  README.md  package.json
experiments/_template/src/: analyze_results.ts  fetch_data.ts  run_experiment.ts  variants.ts
experiments/design-constraint-engine/: .env.example  .gitignore  ANALYSIS.md  HISTORY.md  README.md  package.json  playwright.config.ts  tsconfig.json
experiments/design-constraint-engine/src/: analyze_results.ts  fetch_data.ts  run_experiment.ts  variants.ts
experiments/madlibs-prompts/: README.md  package.json
experiments/madlibs-prompts/data/: prompts.json  result-M01.md  result-M03.md  result-M05.md
experiments/madlibs-prompts/keywords/: registry.ts  types.ts
experiments/madlibs-prompts/src/: derive.ts  generate.ts  (+1 more)
experiments/prompt-performance/: ANALYSIS.md  HISTORY.md  KEYWORDS.md  README.md  dashboard.html  package.json
experiments/tag-optimization/: .env.example  .gitignore  ANALYSIS.md  HISTORY.md  INTEGRATION.md  README.md  package.json
experiments/weather-markets/: fetch_market_snapshot.py  program.md
weather-markets/: README.md  get_data.py  manual_market_snapshot.json.example  market_snapshot.py  runner.py  train.py
(+39 files in other folders)
